# config-transport-f5

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  config.py  create_database.py  local.env  pyproject.toml
handler/big_ip/: big_ip.py  collections.py  models.py  monitor.py  routes.py
handler/database/: connect_db.py
handler/gtm/: gtm.py  models.py  routes.py
handler/ltm/: collections.py  ltm.py  models.py  routes.py
handler/ltm/generic_message/: generic_message.py  models.py  routes.py
handler/network/: models.py  network.py  routes.py  utils.py
handler/system/: models.py  routes.py  system.py
handler/user/: models.py  routes.py  user.py
handler/utils/: socket_events.py  utils.py
static/src/scss/: responsive.scss
templates/: base.html  config_import.html  error.html  finalizar.html  index-big-ip.html  index.html  login.html  new_config.html  register.html  send_config.html
templates/gtm/: datacenter.html  pool_wide_ip.html  server_gtm.html  server_ip.html  wide_ip.html
templates/ltm/: datagroup.html  irule.html  monitor.html  nat.html  policies.html  pool.html  profiles.html  snat.html  snat_pool.html  virtual_server.html
templates/ltm/generic_message/: peer.html  protocol.html  (+3 more)
templates/network/: interfaces.html  packet_filters_rule.html  routes_domains.html  routes_statics.html  self_ip.html  trunks.html  vlans.html
templates/system/: chassis.html  devicegroup.html  folders.html  icall.html  sys_devices.html  system_information.html  system_modules.html  traffic_group.html  user_alert.html  users.html
(+23 files in other folders)
